1. Add App Info Service 2. get exchangeMessage from App Info Service 3. tab3 awardObject change word 4. http-config add url startWith server address condition without padding baseUrl

--- a/src/app/points-redeem/points-redeem.page.html
+++ b/src/app/points-redeem/points-redeem.page.html
@@ -30,7 +30,7 @@
       <ion-item lines="none">
         <ion-label class="ion-text-wrap">
           <ion-text color="primary">
-            <h4>每100點Point可以兌換100元7-11禮券，於回診時與曾鈺晴小姐兌換，可使用Line先連絡哦。</h4>
+            <h4>{{exchangeMessage}}</h4>
           </ion-text>
         </ion-label>
       </ion-item>
