--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -3,7 +3,7 @@
     <!-- <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons> -->
-    <ion-title >
+    <ion-title>
       Point 點數
     </ion-title>
   </ion-toolbar>
@@ -37,8 +37,10 @@
             <p>points: {{award.points}}</p>
           </ion-text>
         </ion-label>
-        <ion-icon slot="start" [ngClass]="{'goal': award.goal}" *ngIf="award.id === 'TOT1'" src="assets/icon/money-bag.svg"></ion-icon>
-        <ion-icon slot="start" [ngClass]="{'goal': award.goal}" *ngIf="award.id != 'TOT1'" src="assets/icon/money-coin.svg"></ion-icon>
+        <ion-icon slot="start" [ngClass]="{'goal': award.goal}" *ngIf="award.id === 'TOT1'"
+          src="assets/icon/money-bag.svg"></ion-icon>
+        <ion-icon slot="start" [ngClass]="{'goal': award.goal}" *ngIf="award.id != 'TOT1'"
+          src="assets/icon/money-coin.svg"></ion-icon>
       </ion-item>
     </ion-card-content>
   </ion-card>
