--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -33,7 +33,8 @@
           </div>
         </ion-col>
       </ion-row>
-      <ion-row>
+      <!-- 1090904 決議 iOS 不開放註冊功能 -->
+      <ion-row *ngIf="false">
         <div class="ion-text-center" style="width:100%">
           還沒有帳號嗎?? <a [routerLink]="['/reg']">註冊新帳號</a> 
         </div>
