--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -34,7 +34,7 @@
         </ion-col>
       </ion-row>
       <!-- 1090904 決議 iOS 不開放註冊功能 -->
-      <ion-row *ngIf="false">
+      <ion-row>
         <div class="ion-text-center" style="width:100%">
           還沒有帳號嗎?? <a [routerLink]="['/reg']">註冊新帳號</a> 
         </div>
